commit con animaciones completas para entregar

--- a/Paginas/hombres.html
+++ b/Paginas/hombres.html
@@ -57,7 +57,7 @@
                         Email:                   <input name="mail">
                         <br>
                         <br>
-                        <input type="submit"value="enviar"/>
+                        <input type="submit"value="enviar" class="mailEfecto"/>
                       
                     </form></small>
                 
