--- a/Paginas/ofertas.html
+++ b/Paginas/ofertas.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ofertas</title>
-    <link rel="stylesheet" href="../styleresto.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/styleresto.css"/>
+    
 <body>
     <header>
         <div><nav class="menuDeBusquedaPadre">
@@ -67,6 +69,6 @@
             </nav>
     </nav>
 </footer>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
