--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oculos</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" type="text oculos" href="//fonts.googleapis.com/css?family=EB+Garamond" />
 </head>
 <body>  
-  <div id="fondoDegrade">  
     <header>
        <div><nav class="menuDeBusquedaPadre">
             <ul><a href="./Paginas/hombres.html"class="menuDeBusqueda" id="menuDeBusqueda-hombres">Hombres</a></ul>
@@ -29,8 +29,8 @@
         </div>
    
              <h2><img src="./fotos/probando.png"class="chicaPortada"></h2> 
-      </header>
-    <footer>
+        </header>
+       <footer>
         <img src="./fotos/linea negra fina.png" class="lineaFina">
         <nav class="contacto">
             <ul> Encontranos: <a href="https://www.instagram.com/"><img src="./fotos/ig chico.png"class="fotoig"></a>          
@@ -46,18 +46,22 @@
                     <div>Prefiero no decirlo</div>
                     <input type="radio"name="sexo"value="prefiero no decirlo"/>
                  <br>
-                    Email:                   <input name="mail" class="mailEfecto">
+                <div class="form-group">
+                  <label for="mail">Email:</label>
+                                     <input name="mail" class="mailEfecto">
                     <br>
                     <br>
                     <input type="submit"value="enviar"/>
                   
-                </form></small>
+                  </form></small>
+                 </div>
             
 
             </ul>
-        </nav>
+       </nav>
     </footer>
-  </div>
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
