Ya con bootstrap

--- a/Paginas/carrito.html
+++ b/Paginas/carrito.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="../css/styleresto.css"/>
 <body>
     <header>
+        <div class="container-fluid">
+            <div style="height: 100px; background-color:black;">
         <div><nav class="menuDeBusquedaPadre">
+                </div>
             <ul><a href="../Paginas/hombres.html"class="menuDeBusqueda" id="menuDeBusqueda-hombres">Hombres</a></ul>
            <ul> <a href="../Paginas/mujere.html"class="menuDeBusqueda"id="menuDeBusqueda-mujeres">Mujeres </a></ul>
            <ul> <a href="../Paginas/nuevos.html"class="menuDeBusqueda"id="menuDeBusqueda-nuevos">Nuevos</a></ul>
@@ -20,12 +23,25 @@
          </nav> </div> 
     <h1 class="tuCarritoescritou"> Tu carrito:</h1>
     <h2> <img src="../fotos/imagen roja.jpg" class="subrayadoRojo"></h2>
-   <div> <nav class="carroPadre">
-             <div id="fullChico"><img src="../anteojos/anteojos ful carro.jpg"></div> 
-              <div id="kareyChico"><img src="../anteojos/kareycarro.jpg"></div>
-             <div id="typeChico"><img src="../anteojos/typecarro.jpg"></div>
-             <div id="rqlChico"><img src="../anteojos/rqlcarro.jpg"></div>
-             <h4 class="totalPrecio"><b> Total: $7250</b></h4>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="row align-items-center">
+        <div class="col">
+          <img src="../anteojos/anteojos ful carro.jpg">
+        </div>
+        <div class="col">
+          <img src="../anteojos/kareycarro.jpg">
+        </div>
+        <div class="col">
+          <img src="../anteojos/typecarro.jpg">
+        </div>
+        <div class="col">
+            <img src="../anteojos/rqlcarro.jpg">
+        </div>
+    </div>
+            <h4 class="totalPrecio"><b> Total: $7250</b></h4>
             <input class="comprarBoton" type="submit"value="Comprar"/>
    </div> </nav> 
 
