--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>  
     <header>
-       <div><nav class="menuDeBusquedaPadre">
+      <div class="container-fluid">
+        <div style="height: 100px; background-color:black;">
+  <div><nav class="menuDeBusquedaPadre" >
+         </div>
             <ul><a href="./Paginas/hombres.html"class="menuDeBusqueda" id="menuDeBusqueda-hombres">Hombres</a></ul>
            <ul> <a href="./Paginas/mujere.html"class="menuDeBusqueda"id="menuDeBusqueda-mujeres">Mujeres </a></ul>
            <ul> <a href="./Paginas/nuevos.html"class="menuDeBusqueda"id="menuDeBusqueda-nuevos">Nuevos</a></ul>
@@ -19,9 +22,10 @@
             <ul><img src="./fotos/logo oculos.jpeg" id="logoOculos"></ul>
             <ul class="carritoEscrito">Tu carrito:</ul>
             <ul><a href="./Paginas/carrito.html" id="elCarrito"><img src="./fotos/carritochico.png"></a></ul>
-            <header>
-        </nav> </div>
-
+            <ul> <div ></div></ul> 
+            <header>     
+     </nav> </div>
+      </div>
         <div class="indexGrande">
         <h1><b> Oculos </b></h1>
         <h2> <img src="./fotos/imagen roja.jpg" class="subrayadoRojo" class="subrayadoEfecto"></h2>
