Ya para entregar bootstrap

--- a/Paginas/hombres.html
+++ b/Paginas/hombres.html
@@ -40,7 +40,7 @@
                 </div>
               </div>
               <div class="row justify-content-center">
-                <div class="col-4" class="escritoAnteojos">
+                <div class="col-4" class="escritoAnteojos" class="text-center">
                   anteojosRojos1
                 </div>
                 <div class="col-4">
