--- a/Paginas/carrito.html
+++ b/Paginas/carrito.html
@@ -21,7 +21,7 @@
             <ul class="carritoEscrito"> Tu carrito:</ul>
             <ul><a href="../Paginas/carrito.html"><img src="../fotos/carritochico.png"id="elCarrito"></a></ul>
          </nav> </div> 
-    <h1 class="tuCarritoescritou"> Tu carrito:</h1>
+    <h1 class="tuCarritoescrito"> Tu carrito:</h1>
     <h2> <img src="../fotos/imagen roja.jpg" class="subrayadoRojo"></h2>
     <br>
     <br>
