Ya con scss end

--- a/Paginas/carrito.html
+++ b/Paginas/carrito.html
@@ -46,7 +46,7 @@
    </div> </nav> 
 
 <footer>
-    <img src="../fotos/linea negra fina - copia.png." class="lineaFinaCarro">
+    <img src="../fotos/linea negra fina - copia.png" class="lineaFinaCarro">
     <nav>
         <ul>
             <br>
@@ -54,7 +54,7 @@
                 <ul> Encontranos: <a href="https://www.instagram.com/"><img src="../fotos/ig chico.png"class="fotoig"></a>                                  <a href="https://twitter.com/?lang=es"><img src="../fotos/twiter chico.png"></a></li> 
                     <br> 
                    <small>Contactanos:
-                    <form>
+                    <form>  
                       Nombre completo:  <input name="Nombre"/>
                         <div>Hombre</div>
                         <input type="radio"name="sexo"value="hombres"/>
