--- a/Paginas/hombres.html
+++ b/Paginas/hombres.html
@@ -39,22 +39,32 @@
                    <img src="../anteojos/anteojos ful.jpg" class="pt-1 pb-1 border mt-">
                 </div>
               </div>
-              <div class="row justify-content-center">
+              <div class="anteojosEscritoPadre">
+                <div class="row justify-content-center">
                 <div class="col-4" class="escritoAnteojos" class="text-center">
                   anteojosRojos1
                 </div>
                 <div class="col-4">
                   anteojosFul
                 </div>
-              </div>
-              <div class="row justify-content-center">
+                </div>
+            </div>
+                <div class="row justify-content-center">
                 <div class="col-4">
                   $500
                 </div>
                 <div class="col-4">
-                  $500
+                  $500  
                 </div>
-              </div>
+                <div class="row justify-content-center">
+                  <div class="col-4">
+                    <input class="añadirAlCarro" type="submit"value="añadir al carrito"/>
+                  </div>
+                  <div class="col-4">
+                    <input class="añadirAlCarro" type="submit"value="añadir al carrito"/>
+                  </div>
+                
+            </div>
             
     </nav> </div> 
     <footer>
