--- a/Paginas/mujere.html
+++ b/Paginas/mujere.html
@@ -43,15 +43,21 @@
            <div class="col-4">
              anteojosFul
            </div>
-         </div>
-         <div class="row justify-content-center">
-           <div class="col-4">
-             $500
-           </div>
-           <div class="col-4">
-             $500
-           </div>
-        </div>
+           <div class="row justify-content-center">
+            <div class="col-4">
+              $500
+            </div>
+            <div class="col-4">
+              $500  
+            </div>
+            <div class="row justify-content-center">
+              <div class="col-4">
+                <input class="añadirAlCarro" type="submit"value="añadir al carrito"/>
+              </div>
+              <div class="col-4">
+                <input class="añadirAlCarro" type="submit"value="añadir al carrito"/>
+              </div>
+          </div>
 
     </nav> </div> 
 
