--- a/Paginas/nuevos.html
+++ b/Paginas/nuevos.html
@@ -43,14 +43,21 @@
                   anteojosFul
                 </div>
               </div>
-              <div class="row justify-content-center">
-                <div class="col-4">
-                  $500
+                <div class="row justify-content-center">
+                  <div class="col-4">
+                    $500
+                  </div>
+                  <div class="col-4">
+                    $500  
+                  </div>
+                  <div class="row justify-content-center">
+                    <div class="col-4">
+                      <input class="añadirAlCarro" type="submit"value="añadir al carrito"/>
+                    </div>
+                    <div class="col-4">
+                      <input class="añadirAlCarro" type="submit"value="añadir al carrito"/>
+                    </div>
                 </div>
-                <div class="col-4">
-                  $500
-                </div>
-              </div>
     </nav> </div> 
 
 
