--- a/Paginas/ofertas.html
+++ b/Paginas/ofertas.html
@@ -46,13 +46,20 @@
            </div>
          </div>
          <div class="row justify-content-center">
-           <div class="col-4">
-             $500
-           </div>
-           <div class="col-4">
-             $500
-           </div>
-         </div>
+          <div class="col-4">
+            $500
+          </div>
+          <div class="col-4">
+            $500  
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-4">
+              <input class="añadirAlCarro" type="submit"value="añadir al carrito"/>
+            </div>
+            <div class="col-4">
+              <input class="añadirAlCarro" type="submit"value="añadir al carrito"/>
+            </div>
+        </div>
     </nav> </div> 
 
 
