--- a/Paginas/mujere.html
+++ b/Paginas/mujere.html
@@ -8,6 +8,7 @@
     <title>Mujeres</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/styleresto.css"/>
+    <link rel="icon" href="../fotos/logo oculos - grande}.jpeg">
 <body>
     <header>
         <div class="container-fluid">
