--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" type="text oculos" href="//fonts.googleapis.com/css?family=EB+Garamond" />
+    <link rel="icon" href="./fotos/logo oculos - grande}.jpeg">
 </head>
 <body>  
     <header>
